Fix img alignment

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    
+
     align-items: center;
     text-align: center;
     padding: 20px;
@@ -88,5 +88,8 @@ hr{
     background-color: rgb(159, 40, 40);
     height: 1px;
     border: none;
+}
+img{
+    align-items: center;
 }
 
